--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,15 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/squareDancer.js"></script>
+    <script src="src/flashyDancer.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSquareDancer">add a square dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeFlashyDancer">add a flashy dancer</a>    </div>
     <script src="src/init.js"></script>
   </body>
 </html>
