end of sprint update

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -10,11 +10,28 @@
     <script src="src/flashyDancer.js"></script>
   </head>
   <body>
+    <!-- ------------ Topbar Title ------------ -->
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSquareDancer">add a square dancer</a>    </div>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeFlashyDancer">add a flashy dancer</a>    </div>
+    <div>
+
+    <!-- ------------ Menu ------------ -->
+    <div id="menu">
+      <div class="table">
+        <ul id="horizontal-list">
+          <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>
+          <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeSquareDancer">add a square dancer</a>
+          <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeFlashyDancer">add a flashy dancer</a>
+
+
+          <a href="#" class="goCrazyButton" data-dancer-maker-function-name="flashy">go crazy</a>
+          <a href="#" class="lineUpButton" data-dancer-maker-function-name="lineUp">line up</a>
+          <a href="#" class="partnerUpButton" data-dancer-maker-function-name="partnerUp">partner up</a>
+          <a href="#" class="randomizeButton" data-dancer-maker-function-name="random">new spot</a>
+        </ul>
+      </div>
+    </div>
+
     <script src="src/init.js"></script>
   </body>
 </html>
